# hooked

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  DOLT_REMOTE.md  README.md  manifest
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
claude-hook-guard/: Cargo.toml  IMPLEMENTATION_PLAN.md  default-rules.toml
claude-hook-guard/src/: agent_spawn.rs  command_match.rs  config.rs  engine.rs  input.rs  lib.rs  lists.rs  main.rs  parser.rs  safety.rs  structure.rs  walker.rs
claude-hook-guard/src/modes/: delegation.rs  mod.rs  native_tools.rs  readonly.rs  safety.rs  strict.rs
claude-hook-guard/tests/: agent_registry_tests.rs  binary_tests.rs  config_policy_tests.rs
docs/: release-smoke-test.md
scripts/: check.sh
src/: cli.rs  clock.rs  dbh.rs  envelope.rs  exit.rs  lib.rs  logging.rs  main.rs  parity.rs  paths.rs  render.rs  schema.rs  test_utils.rs
src/cmd/: agents.rs  annotate.rs  append_daily.rs  backup.rs  before_stop.rs  chain.rs  compactions.rs  configs.rs  coverage.rs  diff.rs  export.rs  failures.rs  gate.rs  health.rs  import_legacy.rs  ingest.rs  init.rs  label.rs  last.rs  mod.rs  provenance.rs  prune.rs  rebuild.rs  replay.rs  search.rs  session.rs  sessions.rs  skills.rs  slow.rs  sql.rs  summary.rs  tail.rs  tokens.rs  tools.rs  trends.rs  util.rs
src/enrich/: gitcfg.rs  lineage.rs  mod.rs  payload.rs  session.rs  skill.rs
src/ingest/: archive.rs  mod.rs  writes.rs
tests/parity/: README.md  run_parity.sh
tests/parity/fixtures/: compaction_chain.jsonl  duplicate_event_hash.jsonl  failed_tools.jsonl  gzip_input.jsonl  (+12 more)
