[package]
name = "hooked"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"

[dependencies]
clap = { version = "=4.6.1", features = ["derive"] }
rusqlite = { version = "=0.39", features = ["bundled", "backup"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = { version = "=1.0.149", features = ["preserve_order"] }
chrono = { version = "=0.4.44", features = ["serde"] }
sha2 = "=0.11"
regex = "=1.12.3"
flate2 = "=1.1.9"
uuid = { version = "=1.23.1", features = ["v4"] }
wait-timeout = "=0.2"
ctrlc = "=3.4"
fslock = "=0.2"
anyhow = "=1.0"
thiserror = "=2.0"
tempfile = "=3.14"

[dev-dependencies]

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
